# HackathonEcommercePizza

./: .gitignore  HACKATON.md  README.md  pyproject.toml
carrinho/: models.py  urls.py  views.py
carrinho/templates/: lista_carrinho.html  visualizar_carrinho.html
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
pedidos/: admin.py  forms.py  models.py  urls.py  views.py
pedidos/templates/: criar_pedido.html  deletar_pedido.html  editar_pedido.html
pizzaria/: settings.py  urls.py  wsgi.py
produtos/: admin.py  models.py  urls.py  views.py
produtos/migrations/: 0002_pedido_produtocatalogo_itempedido_variacao.py
produtos/static/css/: contato.css
produtos/static/js/: contato.js
produtos/templates/: listar_produtos.html
produtos/templates/contato/: contato.html
