[tool.poetry]
name = "pizzaria"
version = "0.1.0"
description = "Description []: E-commerce para pizzaria com sistema de pedidos e catálogo de produtos"
authors = ["gentil <gentilrn.65@hotmail.com>, bento <bentoluizv@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
Django = "5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
